# win_framework

./: CMakeLists.txt  README.MD
include/: Button.h  Child.h  ComboBox.h  DynamicArray.h  Edit.h  ListBox.h  Menu.h  Menu_external.h  Menu_internal.h  ProgressBar.h  Tab.h  Window.h  Window_external.h  Window_internal.h  display.h  filename.h  win_framework.h  windowProcFunc.h
source/: Button.c  Child.c  ComboBox.c  DynamicArray.c  Edit.c  ListBox.c  Menu.c  ProgressBar.c  Tab.c  Window.c  display.c  filename.c  main.c  resources.rc  win_framework.manifest  windowProcFunc.c
